Use normalized by blockSize coordinates